--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
   "email": "",
   "password": "",
-  "qualityCom": "1 = 16-bit FLAC, 2 = ALAC, 3 = VBR L4 AAC",
-  "quality": "1"
+  "quality": 4
 }
